# xfg-rs

./: Cargo.toml
examples/: Cargo.toml
examples/src/: lib.rs
examples/src/flat/: main.rs
examples/src/pbm/: main.rs
examples/src/pbm_deferred/: main.rs
src/: attachment.rs
src/graph/: build.rs  mod.rs
src/pass/: build.rs  mod.rs
