[package]
name = "xfg-examples"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
repository = "https://github.com/omni-viral/xfg-rs"
publish = false

[dependencies]
cgmath = "0.16"
env_logger = "0.5"
genmesh = "0.5.0"
gfx-backend-dx12 = { path = "../../gfx/src/backend/dx12", optional = true }
gfx-backend-gl = { path = "../../gfx/src/backend/gl", optional = true }
gfx-backend-empty = { path = "../../gfx/src/backend/empty" }
gfx-backend-metal = { path = "../../gfx/src/backend/metal", optional = true }
gfx-backend-vulkan = { path = "../../gfx/src/backend/vulkan", optional = true }
gfx-hal = { path = "../../gfx/src/hal" }
gfx-memory = { path = "../../gfx-memory" }
log = "0.4"
smallvec = "0.4"
winit = "0.10"
xfg = { path = ".." }

[features]
dx12 = ["gfx-backend-dx12"]
gl = ["gfx-backend-gl"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[[bin]]
name = "flat"
path = "src/flat/main.rs"

[[bin]]
name = "pbm"
path = "src/pbm/main.rs"

[[bin]]
name = "pbm_deferred"
path = "src/pbm_deferred/main.rs"
